# neuroPredict-precision-medicine-system

./: README.md  config.py  setup.py
.github/workflows/: ci-cd.yml
api/: main.py
api/routers/: exceptions.py  prediction.py
data/: pipeline.py
features/: engineering.py
knowledge_graph/: graph.py
models/: ensemble.py
neuropredict/: pyproject.toml
neuropredict/data/: pipeline.py
neuropredict/deployment/prometheus/: prometheus.yml
neuropredict/knowledge_graph/: graph.py
neuropredict/models/: ensemble.py
neuropredict/notebooks/: 01_eda.ipynb
neuropredict/src/neuropredict/features/utils/: helpers.py
rag/: system.py
tests/: conftest.py
