[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuropredict"
version = "0.1.0"
description = "Sistema de Medicina de Precisão para Epilepsia Refratária"
authors = [
    {name = "Adriele", email = "nathalia.adriele@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["neurologia", "epilepsia", "medicina-precisão", "machine-learning", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    # Core
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    
    # Machine Learning
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
    "optuna>=3.3.0",
    "imbalanced-learn>=0.11.0",
    
    # Deep Learning
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pytorch-lightning>=2.0.0",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
    
    # Graph Neural Networks
    "torch-geometric>=2.3.0",
    "networkx>=3.1.0",
    "neo4j>=5.11.0",
    
    # Feature Engineering
    "feature-engine>=1.6.0",
    "category-encoders>=2.6.0",
    
    # Explainability
    "shap>=0.42.0",
    "lime>=0.2.0.1",
    "captum>=0.6.0",
    
    # Data Validation
    "pydantic>=2.0.0",
    "pandera>=0.16.0",
    "great-expectations>=0.17.0",
    
    # API & Web
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "streamlit>=1.25.0",
    "plotly>=5.15.0",
    "dash>=2.11.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "psycopg2-binary>=2.9.0",
    "redis>=4.6.0",
    
    # Medical Data
    "pydicom>=2.4.0",
    "nibabel>=5.1.0",
    "mne>=1.4.0",
    "biopython>=1.81",
    
    # LLM & RAG
    "langchain>=0.0.300",
    "chromadb>=0.4.0",
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "tqdm>=4.65.0",
    "joblib>=1.3.0",
    "dask[complete]>=2023.7.0",
    
    # Monitoring & Logging
    "mlflow>=2.5.0",
    "wandb>=0.15.0",
    "prometheus-client>=0.17.0",
    "loguru>=0.7.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "pre-commit>=3.3.0",
    "ipython>=8.14.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
]

docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/seu-usuario/neuropredict"
Documentation = "https://neuropredict.readthedocs.io"
Repository = "https://github.com/seu-usuario/neuropredict"
"Bug Tracker" = "https://github.com/seu-usuario/neuropredict/issues"

[project.scripts]
neuropredict = "neuropredict.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | \.eggs
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]